# SolWatch

./: .env.example  Cargo.toml  README.md
common/: Cargo.toml
config/: config.json
core/: Cargo.toml
core/src/: config.rs  heimdall_plugin.rs  lib.rs
core/src/models/: mod.rs
fetch-service/: Cargo.toml
idl-extractor/: Cargo.toml
idl-extractor/src/: monitor.rs
stream/: Cargo.toml  build.rs
stream/.sqlx/: query-7043b26b5893e6347044a348f04c0fb5d85dbcd38f624701bcae954e15347f93.json
stream/proto/: listing_stream.proto
stream/src/: client.rs  main.rs
tui/: Cargo.toml
tui/src/: main.rs
