[package]
name = "core"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
solana-geyser-plugin-interface = "1.18.26"
sqlx = { version = "0.8.3", default-features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.43.0", features = ["rt"] }
