[package]
name = "idl-extractor"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
anchor-lang = "0.29"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
sha2 = "0.10"
bincode = "1.3"
borsh = "0.10"
