[package]
name = "stream"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
dotenv = "0.15.0"
futures = "0.3.31"
prost = "0.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", default-features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.11"
tonic-reflection = "0.11"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
